<resources>
    <string name="app_name" translatable="false">BioWiki</string>
    <string name="go_bakc_required">Press \'back\' to continue writing your post.</string>
    <string name="dictionary_menu">Dictionary</string>
    <string name="server_ip">http://192.168.43.146</string>
    <string name="server_subdomain">/repo</string>
    <string name="distribution_sample">/sample.xml</string>
    <string name="xmlrpc_error">Couldn\'t connect. Enter the full path to xmlrpc.php on your site and try again.</string>
    <string name="no_network_message">There is no network available</string>
    <string name="sign_out_confirm">Are you sure you want to sign out?</string>
    <string name="account_two_step_auth_enabled">This account has two step authentication enabled. Visit your security settings on WordPress.com and generate an application-specific password.</string>
    <string name="visit_security_settings">Visit security settings</string>
    <string name="select_categories">Select categories</string>
    <string name="tags_separate_with_commas">Tags (separate tags with commas)</string>
    <string name="post_content">Content (tap to add text and media)</string>
    <string name="max_thumbnail_px_width">Default image width</string>
    <string name="password">Password</string>
    <string name="blogs">Blogs</string>
    <string name="account_details">Account details</string>
    <string name="status">Status</string>
    <string name="anonymous">Anonymous</string>
    <string name="post">Post</string>
    <string name="page">Page</string>
    <string name="posts">Posts</string>
    <string name="media">Media</string>
    <string name="video">Video</string>
    <string name="themes">Themes</string>
    <string name="pages">Pages</string>
    <string name="about">About</string>
    <string name="username">Username</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="add_self_hosted_blog">Add self-hosted blog</string>
    <string name="show_and_hide_blogs">Show/hide WordPress.com blogs</string>
    <string name="blogs_visibility">Blogs visibility</string>
    <string name="show_all">Show all</string>
    <string name="hide_all">Hide all</string>
    <string name="notification_sound">Play notification sound</string>
    <string name="notification_vibrate">Vibrate</string>
    <string name="notification_blink">Blink notification light</string>
    <string name="sure_to_remove_account">Are you sure you want to remove this blog?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="could_not_remove_account">Couldn\'t remove blog</string>
    <string name="edit_page">Edit page</string>
    <string name="edit_post">Edit post</string>
    <string name="add_comment">Add comment</string>
    <string name="connection_error">Connection error</string>
    <string name="category_refresh_error">Category refresh error</string>
    <string name="incorrect_credentials">Incorrect username or password.</string>
    <string name="cancel_edit">Cancel edit</string>
    <string name="upload_full_size_image">Upload and link to full image</string>
    <string name="upload_scaled_image">Upload and link to scaled image</string>
    <string name="scaled_image_error">Enter a valid scaled width value</string>
    <string name="scaled_image">Scaled image width</string>
    <string name="load_settings">Load settings now?</string>
    <string name="immediately">Immediately</string>
    <string name="uploading">Uploading</string>
    <string name="gallery_error">The media item couldn\'t be retrieved</string>
    <string name="refresh">Refresh</string>
    <string name="blog_not_found">An error occurred when accessing this blog</string>
    <string name="post_not_found">An error occurred when loading the post. Refresh your posts and try again.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="all">All</string>
    <string name="images">Images</string>
    <string name="unattached">Unattached</string>
    <string name="custom_date" comment="one of the media page filter (others are all, images, unattached, custom date), after selecting Custom Date, you can choose a date range to filter media files">Custom Date</string>
    <string name="upload">Upload</string>
    <string name="learn_more">Learn more</string>
    <string name="media_add_popup_title">Add to media library</string>
    <string name="media_add_popup_capture_photo">Capture photo</string>
    <string name="media_add_popup_capture_video">Capture video</string>
    <string name="media_add_new_media_gallery">Create gallery</string>
    <string name="media_gallery_settings_title">Gallery settings</string>
    <string name="media_gallery_image_order">Image order</string>
    <string name="media_gallery_image_order_random">Random</string>
    <string name="media_gallery_image_order_reverse">Reverse</string>
    <string name="media_gallery_num_columns">Number of columns</string>
    <string name="media_gallery_type">Type</string>
    <string name="media_gallery_type_thumbnail_grid">Thumbnail grid</string>
    <string name="media_gallery_type_squares">Squares</string>
    <string name="media_gallery_type_tiled">Tiled</string>
    <string name="media_gallery_type_circles">Circles</string>
    <string name="media_gallery_type_slideshow">Slideshow</string>
    <string name="media_gallery_edit">Edit gallery</string>
    <string name="pick_photo">Select photo</string>
    <string name="pick_video">Select video</string>
    <string name="media_error_no_permission">You don\'t have permission to view the media library</string>
    <string name="media_no_video_title">VideoPress unavailable</string>
    <string name="media_no_video_message">Get the VideoPress upgrade to upload video!</string>
    <string name="media_edit_title_text">Title</string>
    <string name="media_edit_caption_text">Caption</string>
    <string name="media_edit_description_text">Description</string>
    <string name="media_edit_title_hint">Enter a title here</string>
    <string name="media_edit_caption_hint">Enter a caption here</string>
    <string name="media_edit_description_hint">Enter a description here</string>
    <string name="media_edit_success">Updated</string>
    <string name="media_edit_failure">Failed to update</string>
    <string name="confirm_delete_media">Are you sure you want to delete this media item?</string>
    <string name="confirm_delete_multi_media">Are you sure you want to delete these item(s)?</string>
    <string name="wait_until_upload_completes">Wait until upload completes</string>
    <string name="cannot_delete_multi_media_items">Some media can\'t be deleted at this time. Try again later.</string>
    <string name="media_empty_list">No media</string>
    <string name="media_empty_list_custom_date">No media in this time&#160;interval</string>
    <string name="delete">Delete</string>
    <string name="tab_comments">Comments</string>
    <string name="tab_stats">Stats</string>
    <string name="themes_live_preview">Live preview</string>
    <string name="themes_details_label">Details</string>
    <string name="themes_features_label">Features</string>
    <string name="theme_activate_button">Activate</string>
    <string name="theme_activating_button">Activating</string>
    <string name="theme_fetch_failed">Failed to fetch themes</string>
    <string name="theme_set_failed">Failed to set theme</string>
    <string name="theme_set_success">Successfully set theme!</string>
    <string name="theme_auth_error_title">Failed to fetch themes</string>
    <string name="theme_auth_error_message">Ensure you have the privilege to set themes</string>
    <string name="theme_current_theme">Current theme</string>
    <string name="theme_premium_theme">Premium theme</string>
    <string name="theme_no_search_result_found">No results found</string>
    <string name="link_enter_url">URL</string>
    <string name="link_enter_url_text">Link text (optional)</string>
    <string name="create_a_link">Create a link</string>
    <string name="title">Title</string>
    <string name="pages_empty_list">No pages yet. Why not create&#160;one?</string>
    <string name="page_id">Page</string>
    <string name="page_settings">Page settings</string>
    <string name="untitled">Untitled</string>
    <string name="local_draft">Local draft</string>
    <string name="posts_empty_list">No posts yet. Why not create&#160;one?</string>
    <string name="empty_list_default">This list is empty</string>
    <string name="post_id">Post</string>
    <string name="upload_failed">Upload failed</string>
    <string name="post_password">Password (optional)</string>
    <string name="caption">Caption (optional)</string>
    <string name="horizontal_alignment">Horizontal alignment</string>
    <string name="width">Width</string>
    <string name="featured">Use as featured image</string>
    <string name="featured_in_post">Include image in post content</string>
    <string name="out_of_memory">Device out of memory</string>
    <string name="file_not_found">Couldn\'t find the media file for upload. Was it deleted or moved?</string>
    <string name="post_excerpt">Excerpt</string>
    <string name="download">Downloading media</string>
    <string name="post_settings">Post settings</string>
    <string name="delete_post">Delete post</string>
    <string name="delete_page">Delete page</string>
    <string name="share_url">Share URL</string>
    <string name="loading_posts">Loading posts&#8230;</string>
    <string name="loading_pages">Loading pages&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="on">on</string>
    <string name="comment_status_approved">Approved</string>
    <string name="comment_status_unapproved">Pending</string>
    <string name="comment_status_spam">Spam</string>
    <string name="comment_status_trash">Trashed</string>
    <string name="edit_comment">Edit comment</string>
    <string name="comments_empty_list">No comments</string>
    <string name="mnu_comment_approve">Approve</string>
    <string name="mnu_comment_unapprove">Unapprove</string>
    <string name="mnu_comment_spam">Spam</string>
    <string name="mnu_comment_unspam">Not spam</string>
    <string name="mnu_comment_trash">Trash</string>
    <string name="mnu_comment_edit">Edit</string>
    <string name="dlg_approving_comments">Approving</string>
    <string name="dlg_unapproving_comments">Unapproving</string>
    <string name="dlg_spamming_comments">Marking as spam</string>
    <string name="dlg_trashing_comments">Sending to trash</string>
    <string name="author_name">Author name</string>
    <string name="author_email">Author email</string>
    <string name="author_url">Author URL</string>
    <string name="hint_comment_content">Comment</string>
    <string name="preview_post">Preview post</string>
    <string name="post_signature">Post signature</string>
    <string name="add_tagline">Add a signature to new posts</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="self_hosted_blogs">Self-hosted blogs</string>
    <string name="pref_location">Location</string>
    <string name="location_city">City</string>
    <string name="image_alignment">Alignment</string>
    <string name="app_title">DG1S BioWiki</string>
    <string name="ok">OK</string>
    <string name="passcode_preference_title">PIN lock</string>
    <string name="reader_title_applog">Application log</string>
    <string name="help">Help</string>
    <string name="nux_help_description">Visit the help center to get answers to common questions. or visit the forums to ask new&#160;ones.</string>
    <string name="forums">Forums</string>
    <string name="help_center">Help center</string>
</resources>