<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="wp_pref_root">
    <!--
        <PreferenceCategory
            android:title="@string/wpcom_blogs"
            android:key="wp_pref_wpcom">
        </PreferenceCategory>
        -->

    <PreferenceCategory
        android:key="wp_pref_self_hosted_blogs"
        android:title="@string/self_hosted_blogs"/>

    <PreferenceCategory
        android:key="bw_category_location"
        android:title="@string/pref_location">
        <ListPreference
            android:entries="@array/city_list"
            android:entryValues="@array/city_list"
            android:key="bw_location_city"
            android:title="@string/location_city" />
    </PreferenceCategory>

    <!--
    <PreferenceCategory android:title="@string/notifications"
                        android:key="wp_pref_notifications_category">
        <PreferenceScreen
            android:key="wp_pref_notifications"
            android:persistent="false"
            android:title="@string/manage_notifications">
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="wp_pref_notifications_enabled"
                android:title="@string/enable_notifications"/>
            <PreferenceCategory android:title="@string/types"
                                android:key="wp_pref_notification_types">
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/blogs"
                                android:key="wp_pref_notification_blogs">
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/options">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="wp_pref_notification_sound"
                    android:title="@string/notification_sound"/>
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="wp_pref_notification_vibrate"
                    android:title="@string/notification_vibrate"/>
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="wp_pref_notification_light"
                    android:title="@string/notification_blink"/>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    -->

    <PreferenceCategory
        android:key="wp_post_signature"
        android:title="@string/post_signature">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="wp_pref_signature_enabled"
            android:title="@string/add_tagline" />

        <kr.kdev.dg1s.biowiki.util.BWEditTextPreference
            android:key="wp_pref_post_signature"
            android:title="@string/post_signature" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="wp_passcode_lock_category"
        android:persistent="false"
        android:title="@string/passcode_preference_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="wp_pref_passlock_enabled"
            android:title="@string/passcode_preference_title">
            <intent
                android:targetClass="org.wordpress.passcodelock.PasscodePreferencesActivity"
                android:targetPackage="kr.kdev.dg1s.biowiki" />
        </CheckBoxPreference>
    </PreferenceCategory>

    <!--
    <PreferenceCategory
        android:key="wp_share_pref"
        android:persistent="false"
        android:title="@string/share_preference_title">
        <Preference
            android:key="wp_reset_share_pref"
            android:persistent="false"
            android:title="@string/reset_auto_share_preference">
        </Preference>
    </PreferenceCategory>
    -->

    <PreferenceCategory
        android:key="wp_pref_app_about_section"
        android:title="@string/about">
        <Preference
            android:key="wp_pref_app_title"
            android:title="@string/app_title">
            <intent
                android:targetClass="kr.kdev.dg1s.biowiki.ui.prefs.AboutActivity"
                android:targetPackage="kr.kdev.dg1s.biowiki" />
        </Preference>
        <Preference android:title="@string/open_source_licenses">
            <intent
                android:targetClass="kr.kdev.dg1s.biowiki.ui.prefs.LicensesActivity"
                android:targetPackage="kr.kdev.dg1s.biowiki" />
        </Preference>
        <Preference android:title="@string/reader_title_applog">
            <intent
                android:targetClass="kr.kdev.dg1s.biowiki.ui.AppLogViewerActivity"
                android:targetPackage="kr.kdev.dg1s.biowiki" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="wp_pref_app_signout_section"
        android:title="@string/sign_out">
        <Preference
            android:key="wp_pref_sign_out"
            android:title="@string/sign_out" />
    </PreferenceCategory>

</PreferenceScreen>