<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:padding="@dimen/margin_medium">

    <EditText
        android:id="@+id/linkURL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/link_enter_url"
        android:imeOptions="actionNext"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/linkText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linkURL"
        android:hint="@string/link_enter_url_text"
        android:inputType="text" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/linkText"
        android:layout_marginLeft="@dimen/margin_medium"
        android:text="@string/ok" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ok"
        android:layout_toLeftOf="@id/ok"
        android:text="@string/cancel" />

</RelativeLayout>
