<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:singleLine="true" />
        <!--  <EditText
          android:id="@+id/description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="Description (optional)"
          android:singleLine="true" />-->
        <EditText
            android:id="@+id/caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/caption"
            android:inputType="textCapSentences"
            android:singleLine="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/horizontal_alignment"
            android:textColor="@color/image_options_label"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/alignment_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/image_alignment" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/width"
            android:textColor="@color/image_options_label"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/imageWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/imageWidthText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true"
            android:text="" />

        <CheckBox
            android:id="@+id/featuredImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/featured"
            android:textColor="@color/image_options_text"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/featuredInPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/featured_in_post"
            android:textColor="@color/image_options_text"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>