<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nux_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <kr.kdev.dg1s.biowiki.widgets.BWLinearLayoutSizeBound
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            app:maxWidth="@dimen/nux_width">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <kr.kdev.dg1s.biowiki.widgets.BWTextView
                    android:id="@+id/create_account_label"
                    style="@style/WordPress.NUXTitle"
                    android:text="@string/help"
                    app:fontVariation="light" />

                <kr.kdev.dg1s.biowiki.widgets.BWTextView
                    android:id="@+id/nux_help_description"
                    style="@style/WordPress.NUXGreyButtonNoBg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/nux_help_description" />

                <kr.kdev.dg1s.biowiki.widgets.BWTextView
                    android:id="@+id/help_button"
                    style="@style/WordPress.NUXPrimaryButton"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/help_center" />

                <kr.kdev.dg1s.biowiki.widgets.BWTextView
                    android:id="@+id/forum_button"
                    style="@style/WordPress.NUXPrimaryButton"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/forums" />

                <kr.kdev.dg1s.biowiki.widgets.BWTextView
                    android:id="@+id/applog_button"
                    style="@style/WordPress.NUXPrimaryButton"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/reader_title_applog" />

                <kr.kdev.dg1s.biowiki.widgets.BWTextView
                    android:id="@+id/nux_help_version"
                    style="@style/WordPress.NUXGreyButtonNoBg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/app_name" />
            </LinearLayout>
        </kr.kdev.dg1s.biowiki.widgets.BWLinearLayoutSizeBound>
    </LinearLayout>
</ScrollView>