<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:paddingBottom="@dimen/margin_large"
    android:paddingLeft="@dimen/margin_extra_large"
    android:paddingRight="@dimen/margin_extra_large"
    android:paddingTop="@dimen/margin_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <kr.kdev.dg1s.biowiki.widgets.OpenSansEditText
            android:id="@+id/author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:hint="@string/author_name"
            android:inputType="textPersonName|textNoSuggestions"
            android:singleLine="true" />

        <kr.kdev.dg1s.biowiki.widgets.OpenSansEditText
            android:id="@+id/author_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:hint="@string/author_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <kr.kdev.dg1s.biowiki.widgets.OpenSansEditText
            android:id="@+id/author_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:hint="@string/author_url"
            android:inputType="textUri"
            android:singleLine="true" />

        <kr.kdev.dg1s.biowiki.widgets.OpenSansEditText
            android:id="@+id/comment_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|left"
            android:hint="@string/hint_comment_content"
            android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
            android:minLines="4"
            android:textColorLink="@color/reader_hyperlink" />
    </LinearLayout>
</ScrollView>