<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/postBar"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/view_post_toolbar_bottom"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingTop="6dp">

        <TextView
            android:id="@+id/postTitle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="4dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:shadowColor="#FFFFFF"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:singleLine="true"
            android:textSize="@dimen/text_sz_extra_large"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="48dp"
        android:layout_marginTop="48dp">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/viewPostTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:textSize="@dimen/text_sz_extra_large"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <WebView
                    android:id="@+id/viewPostWebView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />

                <TextView
                    android:id="@+id/tagView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:lines="7"
                    android:maxLines="7"
                    android:padding="5dp"
                    android:text="sdfsdfd"
                    android:textSize="17sp"
                    android:visibility="gone" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>


    <include
        android:id="@+id/layout_comment_box"
        layout="@layout/reader_include_comment_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <RelativeLayout
        android:id="@+id/footerBar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/post_detail_button_size"
        android:layout_above="@+id/layout_comment_box"
        android:layout_alignWithParentIfMissing="true"
        android:background="@drawable/view_post_toolbar"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/deletePost"
            android:layout_width="@dimen/post_detail_button_size"
            android:layout_height="@dimen/post_detail_button_size"
            android:background="@drawable/selectable_background_wordpress"
            android:contentDescription="@string/delete_post"
            android:padding="9dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cab_trash"
            android:tint="@color/post_detail_icon_tint" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/viewPost"
                android:layout_width="@dimen/post_detail_button_size"
                android:layout_height="@dimen/post_detail_button_size"
                android:background="@drawable/selectable_background_wordpress"
                android:contentDescription="@string/preview_post"
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_post_preview"
                android:tint="@color/post_detail_icon_tint" />

            <ImageButton
                android:id="@+id/sharePostLink"
                android:layout_width="@dimen/post_detail_button_size"
                android:layout_height="@dimen/post_detail_button_size"
                android:background="@drawable/selectable_background_wordpress"
                android:contentDescription="@string/share_url"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ab_icon_share"
                android:tint="@color/post_detail_icon_tint" />

            <ImageButton
                android:id="@+id/addComment"
                android:layout_width="@dimen/post_detail_button_size"
                android:layout_height="@dimen/post_detail_button_size"
                android:background="@drawable/selectable_background_wordpress"
                android:contentDescription="@string/add_comment"
                android:padding="9dp"
                android:scaleType="fitCenter"
                android:src="@drawable/dashboard_icon_comments" />

            <ImageButton
                android:id="@+id/editPost"
                android:layout_width="@dimen/post_detail_button_size"
                android:layout_height="@dimen/post_detail_button_size"
                android:background="@drawable/selectable_background_wordpress"
                android:contentDescription="@string/edit_post"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ab_icon_edit"
                android:tint="@color/post_detail_icon_tint" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>